moved tutorial resources in src folders